--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,9 @@ project(5e C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(5e main.c string/string_.c string/string_.h)
+add_executable(5e main.c)
+
+add_library(str string/string_.h string/string_.c
+        string/tasks/removeNonLetters.h
+        )
+target_link_libraries(5e str)
