--- a/string/CMakeLists.txt
+++ b/string/CMakeLists.txt
@@ -10,7 +10,7 @@ add_executable(project main.c)
 # создаём библиотеку
 add_library(str string/string_.h string/string_.c
         # string/tasks/removeNonLetters.h
-        # string/tasks/digitToStart.h
+        string/tasks/digitToStart.h
         # string/tasks/LetterToStart.h
         #string/tasks/digitToStartWithoutChangingTheOrder.h
         # string/tasks/removeExtraSpaces.h
